--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ python = ">=3.10,<4.0"
 aiohttp = "^3.9.5"
 anthropic = "^0.28.0"
 azure-cognitiveservices-speech = "^1.38.0"
-elevenlabs = "^1.2.2"
+elevenlabs = "^1.4.1"
 fastapi = "^0.111.0"
 janus = "^1.0.0"
 jinja2 = "^3.1.4"
@@ -38,7 +38,7 @@ websockets = "^12.0"
 nltk = "^3.8.1"
 
 # LLM Providers
-groq = { version = "^0.9.0", optional = true }
+groq = { version = "^0.9.0"}
 
 # Synthesizers
 google-cloud-texttospeech = { version = "^2.16.3", optional = true }
